crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__v_grow_before.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
~ scroll line 03
~ scroll line 04
~ scroll line 05
~ scroll line 06
~ scroll line 07
~ scroll line 08
~ scroll line 09
~ scroll line 10
┌────────────────────────────────────────────────────────────────────────────────┐
│scroll line 11                                                                  │
│scroll line 12                                                                  │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=5 col=1
