crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__v_shrink_overwrite_then_print.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ Infinity Agent CLI
~ Type your messages below. /help for commands. Ctrl+C to exit.
~ 
~ scroll line 01
~ scroll line 02
~ scroll line 03
~ scroll line 04
~ scroll line 05
~ scroll line 06
~ scroll line 07
~ scroll line 08
~ scroll line 09
┌────────────────────────────────────────────────────────────────────────────────┐
│> word01 word02 word03 word04 word05 word06 word07 word08 word09 word10 word11 w│
│ord12 word13 word14 word15 word16 word17 word18 word19 word20 word21 word22 word│
│23 word24 word25                                                                │
│printed after spinner gone                                                      │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│/help for commands                                 mock: mock-model · 0% context│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=7 col=1
