crates/infinity-agent-cli/tests/snapshots/tui_reflow_snapshots__vertical_before.snap
---
source: crates/infinity-agent-cli/tests/tui_reflow_snapshots.rs
expression: h.screen_with_scrollback()
---
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
~ 
┌────────────────────────────────────────────────────────────────────────────────┐
│                                                                                │
│                                                                                │
│                                                                                │
│                                                                                │
│Infinity Agent CLI                                                              │
│Type your messages below. /help for commands. Ctrl+C to exit.                   │
│                                                                                │
│> hi                                                                            │
│short answer                                                                    │
│                                                                                │
│                                                                                │
│────────────────────────────────────────────────────────────────────────────────│
│                                                                                │
│                                                                                │
│                                                                                │
│mock-model (/help for commands)                                  0% context used│
└────────────────────────────────────────────────────────────────────────────────┘
cursor: row=13 col=1
